# kfc-procedure

./: .gitignore  .pylintrc  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_README.md  README.md  SECURITY.md  SUPPORT.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci-cd.yml  docs.yml
api/: index.html
api/clustering/: index.html
api/cobra/: index.html
api/cobra-core/: index.html
api/combiners/: index.html
api/core-steps/: index.html
api/estimators/: index.html
api/factories/: index.html
api/kfc-core/: index.html
api/local-models/: index.html
api/main/: index.html
api/utilities/: index.html
architecture/overview/: index.html
architecture/workflow/: index.html
changelog-template/: index.html
configuration/: index.html
design-decisions/: index.html
developer-guide/: index.html
developer-guide/extending/: index.html
developer-guide/testing/: index.html
developer/documentation-workflow/: index.html
developer/extending/: index.html
developer/known-issues/: index.html
developer/overview/: index.html
developer/project-structure/: index.html
developer/registry-factory/: index.html
developer/testing/: index.html
docs/: changelog-template.md  configuration.md  design-decisions.md  faq.md  full-developer-documentation.md  index.md  mathematical-foundations.md  performance.md  research-context.md  source-analysis.md  troubleshooting.md
docs/api/: clustering.md  cobra-core.md  cobra.md  combiners.md  core-steps.md  estimators.md  factories.md  generated.md  index.md  kfc-core.md  local-models.md  main.md  utilities.md
docs/architecture/: overview.md  workflow.md
docs/developer/: documentation-workflow.md  extending.md  known-issues.md  overview.md  project-structure.md  registry-factory.md  testing.md
docs/developer-guide/: extending.md  index.md  testing.md
docs/examples/: basic.md
docs/getting-started/: installation.md  quick-start.md
docs/stylesheets/: extra.css
faq/: index.html
full-developer-documentation/: index.html
javascripts/: mathjax.js
mathematical-foundations/: index.html
notebooks/: check_time_computing.ipynb  cobra.ipynb  gradientcobra.ipynb  kfc.ipynb  optimization.ipynb
performance/: index.html
research-context/: index.html
search/: search_index.json
source-analysis/: index.html
tests/: test_kfc_smoke.py
troubleshooting/: index.html
(+255 files in other folders)
