[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kfc-procedure"
version = "0.1.0"
description = "Clusterwise predictive modeling library"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

authors = [
  { name = "OUGI POV", email = "ougipov113@gmail.com" }
]

dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "matplotlib",
  "xgboost"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://github.com/Ougi3ay/kfc-procedure"

# --------------------------
# Optional dependencies (extras)
# --------------------------
[project.optional-dependencies]

core = [
  "numpy",
  "scikit-learn"
]

cobra = [
  "numba",
  "faiss-cpu",
  "xgboost",
  "pandas",
  "numpy",
  "scikit-learn",
  "matplotlib",
  "plotly"
]

dev = [
  "pytest",
  "build",
  "twine",
  "jupyter"
]

all = [
  "kfc-procedure[cobra]",
  "kfc-procedure[dev]"
]

# --------------------------
# setuptools config (src layout)
# --------------------------
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["kfc_procedure*"]

# --------------------------
# pytest config
# --------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-vv --disable-warnings --strict-markers"